[tool.poetry]
name = "aws_cdk_vpc_foundation"
version = "0.1.0"
description = ""
authors = ["iamjustinthecloud <iamjustinthecloud@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = ">=2.237.1,<3.0.0"
constructs = ">=10.4.5,<11.0.0"
pydantic = ">=2.12.5,<3.0.0"
attrs = ">=25.4.0,<26.0.0"
mdutils = ">=1.8.1,<2.0.0"
cdk-nag = "^2.37.55"

[tool.poetry.group.dev.dependencies]
coverage = "^7.13.5"
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

